--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ l>
             font-family: 'Archivo Black', sans-serif;
             font-weight: bold;
             font-size: 30px; /* Ajusta el tamaño del número */
-            color: #63323d;
+            color: #FFFFFF;
             position: absolute;
             top: 165px; /* Ajusta la posición vertical */
             left: 415px; /* Ajusta la posición horizontal */
